<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/respuesta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo4"
    tools:context=".MainActivity4"
    tools:visibility="visible">

    <Button
        android:id="@+id/button7"
        android:layout_width="60dp"
        android:layout_height="41dp"
        android:backgroundTint="#070707"
        android:onClick="funcionParaBttnI"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconTint="#EDE9EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:rippleColor="#0C0C0C"
        app:strokeColor="#FFEB3B" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="212dp"
        android:text="@string/constante7"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="311dp"
        android:layout_height="69dp"
        android:text="@string/constante6"
        android:textColor="#090909"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/button4"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_marginBottom="328dp"
        android:background="#FFC107"
        android:onClick="resSecuencia"
        android:text="@string/constante3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/cantidad"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:background="@drawable/style_bordes"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419" />

    <TextView
        android:id="@+id/result"
        android:layout_width="95dp"
        android:layout_height="183dp"
        android:layout_marginBottom="252dp"
        android:textAlignment="center"
        android:textColor="#0B0A0A"
        android:textSize="20sp"
        android:background="@drawable/style_bordes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>